# rustctl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
backend/: Cargo.toml
backend/src/: constants.rs  main.rs
backend/src/core/: mod.rs
backend/src/game/: mod.rs
backend/src/system/: mod.rs
backend/src/web/: mod.rs
diagrams/: rustctl-state-machine.excalidraw
frontend/: README.md  index.html  package-lock.json  package.json  script.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/views/: ErrBadBuild.tsx  ErrOffline.tsx  Main.tsx
mock/: RustDedicated.mjs  steamcmd-distributor.mjs
src/: constants.rs  lib.rs  main.rs
src/args/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/error/: mod.rs
src/ext_ops/: mod.rs
src/game/: mod.rs  state.rs
src/http/: mod.rs
src/init/: mod.rs
src/logging/: mod.rs
src/misc/: mod.rs
src/parsing/: mod.rs
src/proc/: mod.rs
src/rcon/: mod.rs
src/system/: mod.rs
src/text/: mod.rs
src/util/: mod.rs
src/web/: mod.rs
web/: index.html  script.js  styles.css
