[package]
name = "rustctl"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.162"
log = "0.4.22"
log4rs = "1.3.0"
nix = { "version" = "0.29.0", features = ["fs"] }
regex = "1.11.1"
reqwest = { version = "0.12.7", features = ["blocking"]}
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["serde_derive"] }
toml = "0.8.19"
tungstenite = "0.24.0"
