[package]
name = "rustctl"
version = "0.1.0"
edition = "2024"

[dependencies.console-subscriber]
version = "0.4.1"

[dependencies.tower-http]
version = "0.6.2"
features = ["fs"]

[dependencies.clap]
version = "4.5.37"
features = [ "derive" ]

[dependencies.serde]
version = "1.0.219"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.futures]
version = "0.3.31"

[dependencies.axum]
version = "0.8.4"
features = [ "ws" ]

[dependencies.tokio]
version = "1.44.2"
features = [ "fs", "tracing", "rt" ]
